2010-07-30  Noel O'Boyle

	* scripts/openbabel-python.i: Revert of r3914 (presumably it was a
	mistake to include this file in the commit)

2010-07-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Add detection for single-character
	"bracket" elements, e.g., [n] for a fall-back. Fixes one failure
	from sdfcansmi unit test.

	* include/openbabel/chargemodel.h: Improved documentation, added
	method to retrieve dipole moment (with scaling).

	* src/charges/*: Add scaling factors calculated from regression
	across NCI, Zinc, and other subsets (~1000 molecules).

2010-07-29  Noel O'Boyle

	* include/openbabel/rotor.h: Fix memory leak in AddRotor

2010-07-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/sdfcansmitest.cpp: Added new unit test suggested by TJ
	O'Donnell to check for canonical SMILES consistency from a
	SDFile. Currently shows 4 / 48 failures.

2010-07-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/CMakeLists.txt: Only link getopt.c if needed. Removes
	warnings from Clang and GCC about strlen on non-glibc platforms
	(e.g. Mac).

	* scripts/openbabel-python.i: Add chargemodel to Python bindings.

	* src/mol.cpp (AddHydrogens): Fix crashes exposed by
	buildertest. Make sure to clear flags even if we don't
	actually add hydrogens.

	* test/buildertest.cpp: Add asserts to ensure perception flags are cleared.

2010-07-26  Noel O'Boyle

	* CMakeLists.txt, src/formats/CMakeLists.txt: Conditionally compile
	gamessukformat.cpp only if MSVC or has regex.h. (Fix for MinGW
	compilation)

2010-07-26  Noel O'Boyle

	* scripts/CMakeLists.txt, openbabel-python.i: Pass -DHAVE_EIGEN2 to swig
	and conditionally generate bindings for conformersearch.h.

2010-07-22 Chris Morley

	* src/formats/mdlformat.cpp: right align atom numbers in A line, as
	prompted by Igor Filippov.

	* include/openbabel/tokenst.h: add functor to help withr deleting
	containers of pointers.

2010-07-21  Noel O'Boyle
