@@ -179,7 +179,10 @@ add_library(openbabel ${BUILD_TYPE}
   )
 
 if(NOT WIN32)
-  set(libs ${libs} m dl)
+  set(libs ${libs} m)
+  if(HAVE_LIBDL)
+    set(libs ${libs} dl)
+  endif(HAVE_LIBDL)
 endif(NOT WIN32)
 
 if(ZLIB_FOUND)
